--- a/public/css/_index.scss
+++ b/public/css/_index.scss
@@ -72,6 +72,447 @@
             }
         }
     }
+
+    &-product {
+        margin-top: 150px;
+        background-image: url(../img/home-media-bg_top.png);
+        background-size: contain;
+        background-position: 0 bottom;
+        background-repeat: no-repeat;
+        .row {
+            margin: 0;
+        }
+        &_tab {
+            padding-left: 100px;
+            .nav-link {
+                background-color: transparent;
+                border-radius: 0;
+                color: $gray-99;
+                font-weight: bold;
+                text-align: left;
+                position: relative;
+                transition: $common-transition;
+                &.active {
+                    background-color: transparent;
+                    font-size: 18px;
+                    color: $main-red;
+                    &::before {
+                        position: absolute;
+                        content: "";
+                        width: 15px;
+                        height: 15px;
+                        background-image: url(../img/product-arrow.svg);
+                        background-size: contain;
+                        background-position: center center;
+                        background-repeat: no-repeat;
+                        top: 50%;
+                        left: -15px;
+                        transform: translateY(-50%);
+                    }
+                }
+                &:hover {
+                    color: $main-red;
+                }
+            }
+            >.nav {
+                padding-left: 15px;
+            }
+        }
+        &_item {
+            width: 100%;
+            padding-bottom: 110%;
+            position: relative;
+            background-color: #fff;
+            box-shadow: 0 4px 25px rgba(0,0,0,0.15);
+            img {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                object-fit: contain;
+                top: 0;
+                left: 0;
+            }
+        }
+        &_slider {
+            padding-right: 50px;
+            position: relative;
+            .swiper-button-next, .swiper-button-prev {
+                width: 25px;
+                height: 25px;
+                background-image: url(../img/product-slider-arrow.svg);
+                background-size: contain;
+                background-position: center;
+                background-repeat: no-repeat;
+                margin: 0;
+                top: calc(31% - 20px);
+                &::after {
+                    display: none;
+                }
+            }
+            .swiper-button-next {
+                right: 30px;
+                transform: scaleX(-1);
+            }
+            .swiper-button-prev {
+                right: 75px;
+                left: inherit;
+            }
+            &_inner {
+                width: 100%;
+                padding-bottom: 65%;
+                position: relative;
+            }
+        }
+        &_linear {
+            width: 100%;
+            position: absolute;
+            height: 50%;
+            left: 0;
+            bottom: 0;
+            background: linear-gradient(180deg, rgba(4, 88, 155, 0) 0%, rgba(4, 88, 155, 0.88) 100%);
+            opacity: 0;
+            transition: $common-transition;
+        }
+        &_text {
+            width: 100%;
+            position: absolute;
+            color: #fff;
+            text-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
+            padding: 20px;
+            bottom: 0;
+            left: 0;
+            opacity: 0;
+            transition: $common-transition;
+            h3 {
+                font-size: 24px;
+                margin-bottom: 9px;
+                font-weight: bold;
+            }
+            h4 {
+                font-weight: bold;
+                font-size: 16px;
+                margin-bottom: 5px;
+            }
+            p {
+                font-weight: normal;
+                display: -webkit-box;
+                -webkit-box-orient: vertical;
+                -webkit-line-clamp: 3;
+                overflow: hidden;
+                margin: 0;
+            }
+        }
+        &_swiper {
+            width: 100%;
+            // padding-left: 20px;
+            // padding-right: 20px;
+            padding: 20px 0;
+            position: absolute;
+            height: 100%;
+            top: 0;
+            left: 0;
+            .swiper-slide {
+                width: calc(40%) !important;
+                transition: $common-transition;
+                // padding-right: 20px;
+                display: flex;
+                align-items: flex-end;
+                padding-left: 20px;
+                padding-right: 20px;
+                &-active {
+                    width: calc(60%) !important;
+                    .home-product {
+                        &_linear {
+                            opacity: 1;
+                        }
+                        &_text {
+                            opacity: 1;
+                        }
+                    }
+                }
+            }
+            
+        }
+        &_tabSelect {
+            position: relative;
+            &_active {
+                padding: 10px 20px;
+                border: 1px solid #000;
+                width: 280px;
+                span {
+                    margin-right: 20px;
+                }
+                img {
+                    width: 13px;
+                    transform: rotate(90deg);
+                }
+            }
+            &_hide {
+                position: absolute;
+                width: 100%;
+                border: 1px solid #000;
+                left: 0;
+                top: calc(100% + 5px);
+                padding: 10px 20px;
+                background-color: #fff;
+                display: none;
+                z-index: 20;
+                li {
+                    cursor: pointer;
+                    margin-bottom: 8px;
+                    &:last-child {
+                        margin-bottom: 0;
+                    }
+                    &.active {
+                        color: $main-red;
+                    }
+                }
+            }
+        }
+    }
+
+    &-media {
+        position: relative;
+        width: 100%;
+        padding-bottom: 45.9028%;
+        // background-image: url(../img/home-media-bg.png);
+        background-image: url(../img/home-media-bg_center.png);
+        background-size: cover;
+        background-position: center center;
+        background-repeat: no-repeat;
+        // padding: 276px 0 150px;
+        // margin-top: -180px;
+        &_content {
+            position: absolute;
+            width: 100%;
+            max-width: 890px;
+            padding: 0 20px;
+            top: 50%;
+            left: 50%;
+            margin: 0 auto;
+            transform: translate(-50%,-50%);
+            z-index: 10;
+        }
+        .title-home {
+            color: #fff;
+            text-align: center;
+        }
+        .btn-more {
+            border-color: #fff;
+            span {
+                color: #fff;
+            }
+            &_bg {
+                background-color: #fff;
+            }
+            &:hover {
+                border-color: #fff;
+                span {
+                    color: $main-blue;
+                }
+            }
+        }
+    }
+
+    &-profile {
+        position: relative;
+        &_style {
+            position: absolute;
+            width: 100%;
+            top: 0;
+            left: 0;
+            &.style-320 {
+                display: none;
+            }
+        }
+        .row {
+            margin: 0;
+            >div {
+                padding: 0;
+            }
+        }
+        &_pic {
+            width: 100%;
+            padding-bottom: 104.17%;
+            position: relative;
+            img {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                top: 0;
+                left: 0;
+            }
+        }
+        &_text {
+            display: flex;
+            align-content: center;
+            flex-wrap: wrap;
+            padding: 30px 150px 30px 75px;
+            height: 100%;
+            h2, p {
+                width: 100%;
+            }
+            h2 {
+                margin-bottom: 20px;
+                margin-top: 11.53vw;
+            }
+        }
+    }
+
+    &-bussiness {
+        padding: 135px 0;
+        background-image: url(../img/Business-bg.png);
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        &_text {
+            background-color: $main-blue;
+            width: 50%;
+            transform: translate(10px, 10px);
+        }
+        &_inner {
+            background-color: #fff;
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+            padding: 70px;
+            transform: translate(-10px, -10px);
+            .title-home {
+                margin-bottom: 20px;
+            }
+        }
+    }
+}
+
+.btn-more {
+    display: block;
+    width: fit-content;
+    border: 1px solid $gray-48;
+    margin-top: 50px;
+    width: 190px;
+    height: 55px;
+    position: relative;
+    span {
+        position: absolute;
+        width: 100%;
+        transform: translateY(-50%);
+        top: 50%;
+        text-align: center;
+        color: $gray-48;
+        left: 0;
+        transition: $common-transition;
+    }
+    &_bg {
+        background-color: $main-blue;
+        // width: 100%;
+        width: 0;
+        height: 100%;
+        top: 0;
+        left: 0;
+        position: absolute;
+        transition: $common-transition;
+    }
+    &:hover {
+        border-color: $main-blue;
+        span {
+            color: #fff;
+        }
+        .btn-more_bg {
+            width: 100%;
+        }
+    }
+}
+
+@media screen and (max-width:1600px) {
+    .home {
+        &-product {
+            &_tab {
+                width: 30%;
+            }
+            &_slider {
+                width: 70%;
+            }
+        }
+    }
+}
+
+@media screen and (max-width:1300px) {
+    .home {
+        &-media {
+            .title-home {
+                margin-bottom: 25px;
+            }
+            .btn-more {
+                margin-top: 0px;
+            }
+            .media-list {
+                margin-bottom: 25px;
+            }
+        }
+    }
+}
+
+@media screen and (max-width:1250px) {
+    .home {
+        &-product {
+            .btn-more {
+                border-color: #fff;
+                span {
+                    color: #fff;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width:1199.98px) {
+    .home {
+        &-product {
+            &_tab {
+                padding-left: 50px;
+            }
+            &_slider {
+                padding-right: 30px;
+            }
+        }
+        &-profile {
+            &_text {
+                padding: 30px 70px;
+            }
+        }
+        &-bussiness {
+            &_inner {
+                padding: 50px;
+            }
+        }
+    }
+}
+
+@media screen and (max-width:1100px) {
+    .home {
+        &-media {
+            .media-list {
+                > a {
+                    padding: 10px 15px 10px 10px;
+                    margin-bottom: 15px;
+                }
+                &_pic {
+                    width: 15%;
+                    padding-bottom: calc(15% * 0.7067);
+                }
+                &_text {
+                    width: 85%;
+                    h3 {
+                        font-size: 16px;
+                    }
+                }
+                &_content {
+                    margin-top: 5px;
+                    line-height: 1.3;
+                    font-size: 14px;
+                }
+            } 
+        }
+    }
 }
 
 @media screen and (max-width:991.98px) {
@@ -79,6 +520,97 @@
         &-banner {
             &_title {
                 font-size: 42px;
+            }
+        }
+        &-product {
+            &_tab {
+                width: 100%;
+                display: flex;
+                align-items: flex-end;
+                justify-content: space-between;
+                margin-bottom: 20px;
+                padding-left: 30px;
+                padding-right: 30px;
+                .title-home {
+                    margin: 0;
+                }
+                .nav {
+                    display: none;
+                }
+            }
+            &_slider {
+                width: 100%;
+                padding-right: 10px;
+            }
+            .btn-more {
+                margin-bottom: 100px;
+                border-color: #000;
+                span {
+                    color: #000;
+                }
+            }
+        }
+        &-media {
+            .media-list {
+                display: flex;
+                flex-wrap: wrap;
+                // justify-content: center;
+                margin-bottom: 0;
+                margin: 0;
+                a {
+                    width: 225px;
+                    margin: 0 20px 0 0 !important;
+                    padding: 10px;
+                    height: 100%;
+                    .media-list {
+                        &_pic {
+                            width: 100%;
+                            padding-bottom: 70.67%;
+                            margin-bottom: 10px;
+                        }
+                        &_text {
+                            width: 100%;
+                            padding: 0;
+                            h3 {
+                                font-size: 16px;
+                                width: 100%;
+                            }
+                        }
+                        &_date {
+                            // padding: 5px 0;
+                        }
+                        &_content {
+                            font-size: 14px;
+                        }
+                    }
+                }
+            }
+            .btn-more {
+                margin-top: 0;
+            }
+        }
+        &-profile {
+            &_text {
+                padding: 50px 70px;
+                h2 {
+                    margin-top: 0;
+                }
+            }
+        }
+        &-bussiness {
+            background-image: none;
+            padding: 0;
+            &_text {
+                transform: none;
+                background-color: transparent;
+                width: 100%;
+                padding: 50px 70px;
+            }
+            &_inner {
+                box-shadow: none;
+                background-color: transparent;
+                padding: 0;
+                transform: none;
             }
         }
     }
@@ -90,6 +622,21 @@
             &_title {
                 font-size: 36px;
                 line-height: 1.2;
+            }
+        }
+        &-product {
+            background-image: url(../img/home-media-bg_top-md.png);
+        }
+        &-media {
+            padding-bottom: 70.0521%;
+            background-image: url(../img/home-media-bg_center-md.png);
+            .media-list {
+                width: 100%;
+                margin-bottom: 25px;
+                justify-content: center;
+                a {
+                    margin: 0 10px !important;
+                }
             }
         }
     }
@@ -109,6 +656,77 @@
                 border-width: 1px;
             }
         }
+        &-product {
+            background-image: url(../img/home-media-bg_top-sm.png);
+            &_tab {
+                display: block;
+                margin-bottom: 0;
+                .title-home {
+                    margin-bottom: 15px;
+                }
+            }
+            &_swiper {
+                .swiper-slide {
+                    padding-left: 15px;
+                    padding-right: 15px;
+                    &-active {
+                        width: 100% !important;
+                    }
+                }
+            }
+            &_slider {
+                &_inner {
+                    padding-bottom: 110%;
+                }
+                .swiper-button-next, .swiper-button-prev {
+                    top: 50%;
+                    transform: translateY(-50%);
+                }
+                .swiper-button-next {
+                    transform: translateY(-50%) scaleX(-1);
+                }
+                .swiper-button-prev {
+                    right: inherit;
+                    left: 30px;
+                }
+            }
+            .btn-more {
+                margin-top: 25px;
+            }
+            &_tabSelect {
+                &_active {
+                    width: 100%;
+                    padding: 10px;
+                    span {
+                        font-size: 15px;
+                        margin-right: 10px;
+                    }
+                }
+            }
+        }
+        &-media {
+            padding-bottom: 196.4976%;
+            background-image: url(../img/home-media-bg_center-sm.png);
+            .media-list {
+                display: block;
+                >a {
+                    margin: 0 auto 20px !important;
+                }
+            }
+            .title-home {
+                margin-bottom: 15px;
+            }
+        }
+        &-profile {
+            &_text {
+                padding: 50px 30px;
+            }
+        }
+        &-bussiness {
+            &_text {
+                padding: 50px 30px;
+            }
+        }
     }
 }
 
@@ -117,6 +735,25 @@
         &-banner {
             &_title {
                 font-size: 32px;
+            }
+        }
+        &-product {
+            background-image: url(../img/home-media-bg_top-xxs.png);
+        }
+        &-media {
+            padding-bottom: 240.4688%;
+            background-image: url(../img/home-media-bg_center-xxs.png);
+        }
+        &-profile {
+            &_style {
+                &.style {
+                    &-sm {
+                        display: none !important;
+                    }
+                    &-320 {
+                        display: block;
+                    }
+                }
             }
         }
     }
